fix(action-menu): initially wrong position caused scrolling on mobile

--- a/src/_base.less
+++ b/src/_base.less
@@ -189,18 +189,23 @@ body.flat {
   }
 
   // action menu
-  &.ttrss_index .dijitMenuItemDisabled {
-    opacity: 1;
+  &.ttrss_index {
+    .dijitPopup[aria-label="dijit_Menu_0"] {
+      // fix wrong initial position causing slowly scrolling to the left after initially opening on mobile
+      inset-inline: auto @content-spacing !important;
 
-    &,
-    td {
-      background-color: transparent;
-    }
-    // .dijitMenuItemLabel and other td elements, but bump specificity
-    td.dijitReset {
-      padding-top: 16px;
-      box-shadow: inset 0 1px 0 @bg-input, inset 0 2px 0 @border-darker;
-      font-weight: bold;
+      // style disabled menu items as captions
+      .dijitMenuItemDisabled {
+        opacity: 1;
+        background-color: transparent;
+
+        td {
+          padding-top: 16px;
+          background-color: transparent;
+          box-shadow: inset 0 1px 0 @bg-input, inset 0 2px 0 @border-darker;
+          font-weight: bold;
+        }
+      }
     }
   }
 
